# SocketChat

./: .gitignore
Server/: CMakeLists.txt
Server/Server/include/: ClientStruct.h  MyEpoll.h  Server.h
Server/Server/src/: MapFd2CS.cpp  MyEpoll.cpp  MyMsgQueue.cpp  Server.cpp
Server/include/: ClientStruct.h  EpollProcess.h  MapFd2CS.h  MyEpoll.h  MyMsgQueue.h  MyQueue.hpp  MySqlOp.h  RWLock.h  Server.h  TaskFunction.h  ThreadPool.h
Server/src/: ClientStruct.cpp  EpollProcess.cpp  MapFd2CS.cpp  MyEpoll.cpp  MyMsgQueue.cpp  MySqlOp.cpp  RWLock.cpp  Server.cpp  TaskFunction.cpp  ThreadPool.cpp  main.cpp
